--- a/fxwiz-widget-player/src/main/res/layout/layout_player_live.xml
+++ b/fxwiz-widget-player/src/main/res/layout/layout_player_live.xml
@@ -35,7 +35,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/jz_title_bg"
+        android:background="@drawable/player_title_bg"
         android:gravity="center_vertical">
 
         <ImageView
@@ -47,7 +47,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             android:scaleType="centerInside"
-            android:src="@drawable/jz_click_back_selector" />
+            android:src="@drawable/player_click_back_selector" />
 
         <TextView
             android:id="@+id/title"
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/jz_bottom_bg"
+        android:background="@drawable/player_bottom_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:visibility="invisible">
@@ -97,7 +97,7 @@
             android:paddingLeft="14dp"
             android:paddingRight="14dp"
             android:scaleType="centerInside"
-            android:src="@drawable/jz_enlarge" />
+            android:src="@drawable/player_enlarge" />
     </LinearLayout>
 
     <ImageButton
@@ -115,7 +115,7 @@
         android:layout_height="36dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:indeterminateDrawable="@drawable/jz_loading"
+        android:indeterminateDrawable="@drawable/player_loading"
         android:visibility="invisible" />
 
     <LinearLayout
@@ -130,7 +130,7 @@
             android:id="@+id/start"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/jz_click_play_selector" />
+            android:src="@drawable/player_click_play_selector" />
     </LinearLayout>
 
 
@@ -169,7 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/retry_bg"
+            android:background="@drawable/player_retry_bg"
             android:paddingBottom="4dp"
             android:paddingLeft="9dp"
             android:paddingRight="9dp"
