--- a/fxwiz-widget-player/src/main/res/layout/layout_player_live.xml
+++ b/fxwiz-widget-player/src/main/res/layout/layout_player_live.xml
@@ -21,49 +21,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#000000"
         android:scaleType="fitCenter"
         android:visibility="gone"
         />
 
-    <RelativeLayout
-        android:id="@+id/layout_top"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/player_title_bg"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/player_click_back_selector" />
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginStart="2dp"
-            android:layout_toEndOf="@id/back"
-            android:layout_toRightOf="@id/back"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-
-    </RelativeLayout>
+   <include layout="@layout/item_player_header"/>
 
     <LinearLayout
         android:id="@+id/layout_bottom"
@@ -146,36 +110,5 @@
         android:textSize="12sp"
         android:visibility="invisible" />
 
-    <LinearLayout
-        android:id="@+id/retry_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/video_loading_faild"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/retry_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/player_retry_bg"
-            android:paddingBottom="4dp"
-            android:paddingLeft="9dp"
-            android:paddingRight="9dp"
-            android:paddingTop="4dp"
-            android:text="@string/click_to_restart"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-    </LinearLayout>
+   <include layout="@layout/item_player_error"/>
 </RelativeLayout>
