--- a/fxwiz-widget-player/src/main/res/layout/layout_player_video.xml
+++ b/fxwiz-widget-player/src/main/res/layout/layout_player_video.xml
@@ -28,52 +28,18 @@
         android:visibility="gone"
         />
 
-    <RelativeLayout
-        android:id="@+id/layout_top"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/player_title_bg"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/player_click_back_selector" />
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginStart="2dp"
-            android:layout_toEndOf="@id/back"
-            android:layout_toRightOf="@id/back"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-
-    </RelativeLayout>
+    <include layout="@layout/item_player_header"/>
 
     <ImageButton
         android:id="@+id/ib_lock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:background="#00000000"
         android:padding="20dp"
         android:visibility="invisible"
-        android:background="#00000000"
         />
+
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="36dp"
@@ -81,7 +47,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:indeterminateDrawable="@drawable/player_loading"
-        android:visibility="invisible" />
+        android:visibility="invisible"/>
 
     <LinearLayout
         android:id="@+id/start_layout"
@@ -95,7 +61,7 @@
             android:id="@+id/start"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/player_click_play_selector" />
+            android:src="@drawable/player_click_play_selector"/>
     </LinearLayout>
 
 
@@ -109,102 +75,9 @@
         android:text="@string/replay"
         android:textColor="#ffffff"
         android:textSize="12sp"
-        android:visibility="invisible" />
+        android:visibility="invisible"/>
 
-    <LinearLayout
-        android:id="@+id/retry_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
+    <include layout="@layout/item_player_error"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/video_loading_faild"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/retry_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/player_retry_bg"
-            android:paddingBottom="4dp"
-            android:paddingLeft="9dp"
-            android:paddingRight="9dp"
-            android:paddingTop="4dp"
-            android:text="@string/click_to_restart"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/player_bottom_bg"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:visibility="invisible">
-
-        <TextView
-            android:id="@+id/current"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:text="00:00"
-            android:textColor="#ffffff" />
-
-        <SeekBar
-            android:id="@+id/bottom_seek_progress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1.0"
-            android:background="@null"
-            android:max="10000"
-            android:maxHeight="1dp"
-            android:minHeight="1dp"
-            android:paddingBottom="8dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="8dp"
-            android:progressDrawable="@drawable/player_bottom_seek_progress"
-            android:thumb="@drawable/player_bottom_seek_thumb" />
-
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00"
-            android:textColor="#ffffff" />
-
-        <TextView
-            android:id="@+id/clarity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:paddingLeft="20dp"
-            android:text="clarity"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:visibility="gone"
-            />
-
-        <ImageView
-            android:id="@+id/fullscreen"
-            android:layout_width="45dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/player_enlarge" />
-    </LinearLayout>
+    <include layout="@layout/item_player_video_buttom"/>
 </RelativeLayout>
