--- a/fxwiz-widget-player/src/main/res/values/styles.xml
+++ b/fxwiz-widget-player/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="player_popup_toast_anim" parent="@android:style/Animation">
-        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
-        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+        <item name="android:windowEnterAnimation">@anim/fast_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
 
 </resources>
