--- a/fxwiz-widget-player/src/main/res/layout/fragment_layout_player_video.xml
+++ b/fxwiz-widget-player/src/main/res/layout/fragment_layout_player_video.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.cross.fxwiz_widget_player.view.MyVideoPlayerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:descendantFocusability="blocksDescendants">
+    >
 
 </com.cross.fxwiz_widget_player.view.MyVideoPlayerView>
