--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,35 @@
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/tv_class"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textSize="14sp"
-        />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <FrameLayout
+                android:id="@+id/fl_photo_select"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_gravity="start"
+                android:layout_marginTop="8dp"
+                android:gravity="start"
+                android:background="#119c9c9c"
+                />
+
+            <TextView
+                android:id="@+id/tv_class"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textSize="14sp"
+                />
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
